--- a/Novateca.Web/Novateca.Web/Views/Shared/_Layout.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Shared/_Layout.cshtml
@@ -36,7 +36,15 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     -->
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Users" asp-action="Login">Entrar</a></li>
+                    <li>
+                        <a asp-action="ModalAction"
+                           asp-controller="Home"
+                           asp-route-id="1"
+                           data-target="#modal-container"
+                           data-toggle="modal">
+                            Entrar
+                        </a>
+                    </li>
                     <li><a asp-area="" asp-controller="Users" asp-action="Create">Cadastrar-se</a></li>
                 </ul>
             </div>
