--- a/Novateca.Web/Novateca.Web/Views/Shared/_Layout.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Shared/_Layout.cshtml
@@ -36,18 +36,13 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     -->
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li>
-                        <a asp-action="ModalAction"
-                           asp-controller="Home"
-                           asp-route-id="1"
-                           data-target="#modal-container"
-                           data-toggle="modal">
-                            Entrar
-                        </a>
-                    </li>
+                    <li><a href="#" id="btnShowModal">Entrar</a></li>
                     <li><a asp-area="" asp-controller="Users" asp-action="Create">Cadastrar-se</a></li>
                 </ul>
             </div>
+            <!-- <div class="modal fade" tabindex="-1" id="loginModal"
+                 data-keyboard="false" data-backdrop="static"> -->
+
         </div>
     </nav>
 
@@ -66,6 +61,37 @@
             <p>&copy; 2018 - Novateca.Web</p>
         </footer>
     </div>
+
+    <div class="modal fade" id="loginModal">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">
+                        ×
+                    </button>
+                    <h4 class="modal-title">Satya Login</h4>
+                </div>
+                <div class="modal-body">
+                    <form method="post" asp-controller="Account" asp-action="Login">
+                        <div class="form-group">
+                            <input class="form-control" type="text"
+                                   placeholder="Login Username" id="inputUserName" />
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" placeholder="Login Password"
+                                   type="password" id="inputPassword" />
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary button button4">Entrar</button>
+                    <button type="button" id="btnHideModal" class="btn btn-primary button button4">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
@@ -88,6 +114,20 @@
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
 
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+            $("#btnShowModal").click(function () {
+                $("#loginModal").modal('show');
+            });
+
+            $("#btnHideModal").click(function () {
+                $("#loginModal").modal('hide');
+            });
+        });
+    </script>
+
     @RenderSection("Scripts", required: false)
+
 </body>
 </html>
