--- a/Novateca.Web/Novateca.Web/Views/Shared/_Layout.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@model Novateca.Web.Models.User
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -36,8 +38,9 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     -->
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a href="#" id="btnShowModal">Entrar</a></li>
-                    <li><a asp-area="" asp-controller="Users" asp-action="Create">Cadastrar-se</a></li>
+                    <li><a href="#" id="btnShowLoginModal">Entrar</a></li>
+                    <li><a href="#" id="btnShowRegisterModal">Cadastrar-se</a></li>
+                    <!-- <li><a asp-area="" asp-controller="Users" asp-action="Create">Cadastrar-se</a></li> -->
                 </ul>
             </div>
             <!-- <div class="modal fade" tabindex="-1" id="loginModal"
@@ -69,27 +72,84 @@
                     <button type="button" class="close" data-dismiss="modal">
                         ×
                     </button>
-                    <h4 class="modal-title">Satya Login</h4>
+                    <h4 class="modal-title">Login</h4>
                 </div>
                 <div class="modal-body">
-                    <form method="post" asp-controller="Account" asp-action="Login">
+                    <form asp-controller="Account" asp-action="Login">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group">
-                            <input class="form-control" type="text"
-                                   placeholder="Login Username" id="inputUserName" />
+                            <label asp-for="Username" class="control-label"></label>
+                            <input asp-for="Username" class="form-control" />
+                            <span asp-validation-for="Username" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <input class="form-control" placeholder="Login Password"
-                                   type="password" id="inputPassword" />
+                            <label asp-for="Password" class="control-label"></label>
+                            <input asp-for="Password" class="form-control" />
+                            <span asp-validation-for="Password" class="text-danger"></span>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary button button4">Entrar</button>
+                            <button type="button" id="btnHideLoginModal" class="btn btn-primary button button4">Fechar</button>
                         </div>
                     </form>
                 </div>
-                <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary button button4">Entrar</button>
-                    <button type="button" id="btnHideModal" class="btn btn-primary button button4">Fechar</button>
+               
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="registerModal">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">
+                        ×
+                    </button>
+                    <h4 class="modal-title">Cadastro</h4>
+                </div>
+                <div class="modal-body">
+                    <form asp-controller="Account" asp-action="Register">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="form-group">
+                            <label asp-for="FirstName" class="control-label"></label>
+                            <input asp-for="FirstName" class="form-control" />
+                            <span asp-validation-for="FirstName" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="LastName" class="control-label"></label>
+                            <input asp-for="LastName" class="form-control" />
+                            <span asp-validation-for="LastName" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Email" class="control-label"></label>
+                            <input asp-for="Email" class="form-control" />
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Username" class="control-label"></label>
+                            <input asp-for="Username" class="form-control" />
+                            <span asp-validation-for="Username" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Password" class="control-label"></label>
+                            <input asp-for="Password" class="form-control" />
+                            <span asp-validation-for="Password" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="ConfirmPassword" class="control-label"></label>
+                            <input asp-for="ConfirmPassword" class="form-control" />
+                            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary button button4">Cadastrar</button>
+                            <button type="button" id="btnHideRegisterModal" class="btn btn-primary button button4">Fechar</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
+
 
 
 
@@ -117,12 +177,20 @@
     <script type="text/javascript">
 
         $(document).ready(function () {
-            $("#btnShowModal").click(function () {
+            $("#btnShowLoginModal").click(function () {
                 $("#loginModal").modal('show');
             });
 
-            $("#btnHideModal").click(function () {
+            $("#btnHideLoginModal").click(function () {
                 $("#loginModal").modal('hide');
+            });
+
+            $("#btnShowRegisterModal").click(function () {
+                $("#registerModal").modal('show');
+            });
+
+            $("#btnHideRegisterModal").click(function () {
+                $("#registerModal").modal('hide');
             });
         });
     </script>
