--- a/Novateca.Web/Novateca.Web/wwwroot/css/site.css
+++ b/Novateca.Web/Novateca.Web/wwwroot/css/site.css
@@ -12,6 +12,16 @@ body {
     padding-right: 15px;
 }
 
+footer {
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    margin: 0;
+    padding-right: 0;
+    background-color: #666;
+    color: #eee;
+}
+
 /* Carousel */
 .carousel-caption p {
     font-size: 20px;
@@ -35,3 +45,5 @@ body {
         display: none;
     }
 }
+
+
