--- a/Novateca.Web/Novateca.Web/Views/Users/Details.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Users/Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Details";
-    Layout = "~/Views/Shared/_Menu.cshtml";
+    Layout = "~/Views/Shared/_UserPagesLayout.cshtml";
 }
 
 <h2>Details</h2>
@@ -11,6 +11,18 @@
     <h4>User</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Username)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Username)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Profile)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Profile)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
@@ -30,10 +42,10 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Username)
+            @Html.DisplayNameFor(model => model.EmailConfirmed)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Username)
+            @Html.DisplayFor(model => model.EmailConfirmed)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Password)
