--- a/Novateca.Web/Novateca.Web/Views/Shared/_UserPagesLayout.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Shared/_UserPagesLayout.cshtml
@@ -54,7 +54,7 @@
 </head>
 <body>
     <div class="vertical-menu">
-        <a href="@Url.Action("Index", "Users")" class="active">Livros</a>
+        <a href="@Url.Action("Index", "Users")" class="active">Home</a>
         <a href="@Url.Action("Index", "Books")" class="active">Livros</a>
         <!-- <a href="@Url.Action("GetNewspapers", "Information")" class="active">Periódicos</a>
          <a href="@Url.Action("GetMMultimedias", "Information")" class="active">Multimídias</a>
