--- a/Novateca.Web/Novateca.Web/Views/Users/Delete.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Users/Delete.cshtml
@@ -49,6 +49,12 @@
             @Html.DisplayFor(model => model.EmailConfirmed)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.User_CPF)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.User_CPF)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Password)
         </dt>
         <dd>
