--- a/Novateca.Web/Novateca.Web/Views/Users/Edit.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Users/Edit.cshtml
@@ -47,6 +47,11 @@
                 </div>
             </div>
             <div class="form-group">
+                <label asp-for="User_CPF" class="control-label"></label>
+                <input asp-for="User_CPF" class="form-control" />
+                <span asp-validation-for="User_CPF" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
