--- a/Novateca.Web/Novateca.Web/Views/Shared/_UserPagesLayout.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Shared/_UserPagesLayout.cshtml
@@ -23,14 +23,19 @@
             z-index: 1;
             top: 0;
             left: 0;
-            background-color: #111;
+            background-image: linear-gradient(to bottom, #C0C0C0, #696969);
+            /* background-color: #87877e; */
+            /* background-image: url("../images/menu.jpg"); */
             overflow-x: hidden;
             padding-top: 20px;
         }
 
         .vertical-menu a {
-            background-color: #eee; /* Grey background color */
-            color: black; /* Black text color */
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 16px;
+            font-weight: bold;
+            text-align: center;
+            color: ghostwhite; /* Black text color */
             display: block; /* Make the links appear below each other */
             padding: 12px; /* Add some padding */
             text-decoration: none; /* Remove underline from links */
@@ -42,24 +47,38 @@
             padding: 0px 10px;
         }
 
-            .vertical-menu a:hover {
-                background-color: #ccc; /* Dark grey background on mouse-over */
-            }
+        .vertical-menu a:hover {
+            background-color: #A9A9A9; /* Dark grey background on mouse-over */
+        }
+        /*
+        .vertical-menu a.active {
+                    background-color: #000000; 
+                    color: white;
+                }
 
-            .vertical-menu a.active {
-                background-color: #4CAF50; /* Add a green color to the "active/current" link */
-                color: white;
-            }
+        */
+        
     </style>
 </head>
 <body>
     <div class="vertical-menu">
-        <a href="@Url.Action("Index", "Users")" class="active">Home</a>
-        <a href="@Url.Action("Index", "Books")" class="active">Livros</a>
+        <div class="row">
+            <a href="@Url.Action("Index", "Users")" class="active">
+             <img src="~/images/Novateca_Logo_Sem_Fundo.png" style="width: 100px; height: 80px" />
+            </a>
+        </div>
+        
+        <a href="@Url.Action("Index", "Books")" class="active">
+            <span class="glyphicon glyphicon-book" style="padding: 10px"></span>
+            Livros
+        </a>
         <!-- <a href="@Url.Action("GetNewspapers", "Information")" class="active">Periódicos</a>
          <a href="@Url.Action("GetMMultimedias", "Information")" class="active">Multimídias</a>
     -->
-        <a href="@Url.Action("Index", "FavoriteBooks")" class="active">Favoritos</a>
+        <a href="@Url.Action("Index", "FavoriteBooks")" class="active">
+            <span class="glyphicon glyphicon-star" style="padding: 10px"></span>
+            Favoritos
+        </a>
         <a href="@Url.Action("Logout", "Account")" class="active">Sair</a>
         <a href="@Url.Action("About","Home")" class="active">Sobre o Novateca</a>
         <a href="@Url.Action("Contact","Home")" class="active">Contato</a>
