--- a/Novateca.Web/Novateca.Web/Views/Shared/_Layout.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Shared/_Layout.cshtml
@@ -57,8 +57,8 @@
             <p>&copy; 2018 - Novateca.Web</p>
         </footer>
     </div>
-    
-        <div class="modal fade" id="loginModal">
+
+    <div class="modal fade" id="loginModal">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -124,16 +124,16 @@
                             <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
                         <!--
-                            <div class="form-group">
-                            <label asp-for="Profile" class="control-label"></label>
-                            <select asp-for="Profile">
-                                <option value="admin">Administrador</option>
-                                <option value="user">Usuario</option>
-                            </select>
-                            <span asp-validation-for="Profile" class="text-danger"></span>
-                            </div>
+            <div class="form-group">
+            <label asp-for="Profile" class="control-label"></label>
+            <select asp-for="Profile">
+                <option value="admin">Administrador</option>
+                <option value="user">Usuario</option>
+            </select>
+            <span asp-validation-for="Profile" class="text-danger"></span>
+            </div>
 
-                        -->
+        -->
 
                         <div class="form-group">
                             <label asp-for="Password" class="control-label"></label>
@@ -150,12 +150,25 @@
                             <button type="button" id="btnHideRegisterModal" class="btn btn-primary button button4">Fechar</button>
                         </div>
                     </form>
+                    @if (ViewBag.MyErrorMessage != null)
+                    {
+                        <div id="dialog" title="Erro ao cadastrar usuário">
+                            <p>@ViewBag.MyErrorMessage</p>
+                        </div>
+                    }
+
+                    @if (ViewBag.Message != null)
+                    {
+                        <div id="dialog" title="">
+                            <p>@ViewBag.Message</p>
+                        </div>
+                    }
                 </div>
             </div>
         </div>
     </div>
 
-    
+
 
 
 
@@ -164,6 +177,9 @@
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+
+        <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+        <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
     </environment>
     <environment exclude="Development">
@@ -181,6 +197,16 @@
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
+
+
+
+   
+
+    <script>
+        $(function () {
+            $("#dialog").dialog();
+        });
+    </script>
 
     <script type="text/javascript">
 
