--- a/Novateca.Web/Novateca.Web/Views/Shared/_Layout.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
                         </div>
                         <div class="form-group">
                             <label asp-for="Password" class="control-label"></label>
-                            <input asp-for="Password" class="form-control" />
+                            <input asp-for="Password" type="password" class="form-control" />
                             <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
                         <div class="modal-footer">
@@ -124,25 +124,24 @@
                             <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
                         <!--
-            <div class="form-group">
-            <label asp-for="Profile" class="control-label"></label>
-            <select asp-for="Profile">
-                <option value="admin">Administrador</option>
-                <option value="user">Usuario</option>
-            </select>
-            <span asp-validation-for="Profile" class="text-danger"></span>
-            </div>
+                            <div class="form-group">
+                            <label asp-for="Profile" class="control-label"></label>
+                            <select asp-for="Profile">
+                                <option value="admin">Administrador</option>
+                                <option value="user">Usuario</option>
+                            </select>
+                            <span asp-validation-for="Profile" class="text-danger"></span>
+                            </div>
 
-        -->
-
+                        -->
                         <div class="form-group">
                             <label asp-for="Password" class="control-label"></label>
-                            <input asp-for="Password" class="form-control" />
+                            <input asp-for="Password" type="password" class="form-control" />
                             <span asp-validation-for="Password" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
+                        </div> 
+                        <div class="form-group"> 
                             <label asp-for="ConfirmPassword" class="control-label"></label>
-                            <input asp-for="ConfirmPassword" class="form-control" />
+                            <input asp-for="ConfirmPassword" type="password" class="form-control" />
                             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                         </div>
                         <div class="modal-footer">
