--- a/Novateca.Web/Novateca.Web/Views/Shared/_Layout.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,9 @@
 ﻿@model Novateca.Web.Models.User
 
+@{
+    var ErrorLoginMessage = TempData["ErrorLoginMessage"];
+}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -34,11 +38,8 @@
                 <ul class="nav navbar-nav">
                     <li><a href="#" id="btnShowLoginModal">Entrar</a></li>
                     <li><a href="#" id="btnShowRegisterModal">Cadastrar-se</a></li>
-
                 </ul>
             </div>
-
-
         </div>
     </nav>
 
@@ -47,17 +48,29 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
+        <!-- Footer -->
+
+    </div>
+    <footer class="page-footer">
+
+        <!-- Footer Links -->
+        <div class="container-fluid text-center text-md-left">
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About" class="navbar-brand">Sobre nós</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact" class="navbar-brand">Contato</a></li>
                 </ul>
             </div>
-            <p>&copy; 2018 - Novateca.Web</p>
-        </footer>
-    </div>
+        </div> 
+        <!-- Footer Links -->
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">
+            © 2018 Copyright: Novateca
+        </div>
+        <!-- Copyright -->
 
+    </footer>
+    <!-- Footer -->
     <div class="modal fade" id="loginModal">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
@@ -104,22 +117,23 @@
                     <form asp-controller="Account" asp-action="Register">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group">
-                            <label asp-for="FirstName" class="control-label"></label>
-                            <input asp-for="FirstName" class="form-control" />
+                            <!-- <label asp-for="FirstName" class="control-label"></label> -->
+                            <label for="FirstName">Primeiro nome:</label>
+                            <input asp-for="FirstName" class="form-control"/>
                             <span asp-validation-for="FirstName" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="LastName" class="control-label"></label>
+                            <label for="LastName">Último nome:</label>
                             <input asp-for="LastName" class="form-control" />
                             <span asp-validation-for="LastName" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="Username" class="control-label"></label>
+                            <label for="Username">Username:</label>
                             <input asp-for="Username" class="form-control" />
                             <span asp-validation-for="Username" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="Email" class="control-label"></label>
+                            <label for="Email">Email:</label>
                             <input asp-for="Email" class="form-control" />
                             <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
@@ -135,12 +149,12 @@
 
                         -->
                         <div class="form-group">
-                            <label asp-for="Password" class="control-label"></label>
+                            <label for="Password">Senha:</label>
                             <input asp-for="Password" type="password" class="form-control" />
                             <span asp-validation-for="Password" class="text-danger"></span>
-                        </div> 
-                        <div class="form-group"> 
-                            <label asp-for="ConfirmPassword" class="control-label"></label>
+                        </div>
+                        <div class="form-group">
+                            <label for="ConfirmPassword">Confirme a senha:</label>
                             <input asp-for="ConfirmPassword" type="password" class="form-control" />
                             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                         </div>
@@ -156,6 +170,13 @@
                         </div>
                     }
 
+                    @if (ErrorLoginMessage != null)
+                    {
+                        <div id="dialog" title="Erro ao tentar logar">
+                            <p>@ViewData["ErrorLoginMessage"] = ErrorLoginMessage;</p>
+                        </div>
+                    }
+
                     @if (ViewBag.Message != null)
                     {
                         <div id="dialog" title="">
@@ -166,12 +187,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
 
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
@@ -196,39 +211,10 @@
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
-
-
-
-   
-
-    <script>
-        $(function () {
-            $("#dialog").dialog();
-        });
+    <script>     
     </script>
-
-    <script type="text/javascript">
-
-        $(document).ready(function () {
-            $("#btnShowLoginModal").click(function () {
-                $("#loginModal").modal('show');
-            });
-
-            $("#btnHideLoginModal").click(function () {
-                $("#loginModal").modal('hide');
-            });
-
-            $("#btnShowRegisterModal").click(function () {
-                $("#registerModal").modal('show');
-            });
-
-            $("#btnHideRegisterModal").click(function () {
-                $("#registerModal").modal('hide');
-            });
-        });
+    <script type="text/javascript">      
     </script>
-
     @RenderSection("Scripts", required: false)
-
 </body>
 </html>
