--- a/Novateca.Web/Novateca.Web/Views/Account/Login.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Account/Login.cshtml
@@ -1,9 +1,9 @@
-﻿
+﻿@model Novateca.Web.Models.AccountViewModels.LoginViewModel
 @using System.Collections.Generic
 @using System.Linq
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
-@model LoginViewModel
+
 @inject SignInManager<ApplicationUser> SignInManager
 @{
     ViewData["Title"] = "Log in";
@@ -48,7 +48,7 @@
             </form>
         </section>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    @*<div class="col-md-6 col-md-offset-2">
         <section>
             <h4>Use another service to log in.</h4>
             <hr />
@@ -78,7 +78,7 @@
                 }
             }
         </section>
-    </div>
+    </div>*@
 </div>
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
