--- a/Novateca.Web/Novateca.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Shared/_LoginPartial.cshtml
@@ -17,8 +17,11 @@
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="" asp-controller="Account" asp-action="Register">Cadastrar</a></li>
+    <ul class="nav navbar-nav navbar-right" 
+        style="font-family: Britannic Bold; font-size: 24px; margin-top: 3%;
+        font-weight: bold;
+       ">
         <li><a asp-area="" asp-controller="Account" asp-action="Login">Entrar</a></li>
+        <li><a asp-area="" asp-controller="Account" asp-action="Register">Cadastrar</a></li>
     </ul>
 }
