--- a/Novateca.Web/Novateca.Web/Views/Account/Login.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Account/Login.cshtml
@@ -13,7 +13,7 @@
     <div class="col-md-4">
         <section>
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
-                <h4>Use a local account to log in.</h4>
+                <h4>Logue-se com uma conta local.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
