--- a/Novateca.Web/Novateca.Web/Views/Home/Index.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Home/Index.cshtml
@@ -7,8 +7,8 @@
 
 </style>
 
-<div class="">
-    <img src="" />
-    <p></p>
+<div class="container-fluid">
+    <img src="~/images/home arte.png" 
+         style="padding-top: 8%; margin: 2px; height: 100%; width: 100%;"/>
 </div>
 
