--- a/Novateca.Web/Novateca.Web/Views/Shared/_Layout.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,8 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top" 
+         style="background-color: white; height: 18%; border-color: white;">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -33,17 +34,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Novateca</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">
+                     <img src="~/images/logo.png" style="width: 80px; height: 80px"/>
+                </a>
             </div>
            
             <div class="navbar-collapse collapse">
-                
-                <ul class="nav navbar-nav">
-                    <!--
-        <li><a href="#" id="btnShowLoginModal">Entrar</a></li>
-        <li><a href="#" id="btnShowRegisterModal">Cadastrar-se</a></li>
-                    -->
-                </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
         </div>
@@ -62,58 +58,15 @@
         <!-- Footer Links -->
         <div class="container-fluid text-center text-md-right">
             <!-- <div class="navbar-collapse collapse"> -->
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar navbar-default  navbar-fixed-bottom" role="navigation">
+                <li><a asp-area="" asp-controller="Home" asp-action="Contact">Suporte</a></li>
                 <li><a asp-area="" asp-controller="Home" asp-action="About">Sobre nós</a></li>
-                <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contato</a></li>
             </ul>
-            <div class="footer-copyright text-center py-3">
-                Novateca v.1.0 2018
-            </div>
-            <!--</div> -->
+            
         </div>
         <!-- Footer Links -->
-        <!-- Copyright -->
-       
-        <!-- Copyright -->
-
     </footer>
-    <!-- Footer -->
-    <!--
-         <div class="modal fade" id="loginModal">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">
-                        ×
-                    </button>
-                    <h4 class="modal-title">Login</h4>
-                </div>
-                <div class="modal-body">
-
-                </div>
-
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="registerModal">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">
-                        ×
-                    </button>
-                    <h4 class="modal-title">Cadastro</h4>
-                </div>
-                <div class="modal-body">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    -->
-
-
+   
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
