--- a/Novateca.Web/Novateca.Web/Views/Newspapers/Create.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Newspapers/Create.cshtml
@@ -5,56 +5,55 @@
     Layout = "~/Views/Shared/_UserPagesLayout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Catalogação de periódico</h2>
 
-<h4>Newspaper</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="TitleMain" class="control-label"></label>
+                <label asp-for="TitleMain" class="control-label">Título:</label>
                 <input asp-for="TitleMain" class="form-control" />
                 <span asp-validation-for="TitleMain" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SubTitle" class="control-label"></label>
+                <label asp-for="SubTitle" class="control-label">Subtítulo: (opcional)</label>
                 <input asp-for="SubTitle" class="form-control" />
                 <span asp-validation-for="SubTitle" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Edition" class="control-label"></label>
+                <label asp-for="Edition" class="control-label">Edição:</label>
                 <input asp-for="Edition" class="form-control" />
                 <span asp-validation-for="Edition" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Locate" class="control-label"></label>
+                <label asp-for="Locate" class="control-label">Local de Publicação:</label>
                 <input asp-for="Locate" class="form-control" />
                 <span asp-validation-for="Locate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PublishingCompany" class="control-label"></label>
+                <label asp-for="PublishingCompany" class="control-label">Editora:</label>
                 <input asp-for="PublishingCompany" class="form-control" />
                 <span asp-validation-for="PublishingCompany" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Subject" class="control-label"></label>
+                <label asp-for="Subject" class="control-label">Assunto:</label>
                 <input asp-for="Subject" class="form-control" />
                 <span asp-validation-for="Subject" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CurrentPeriodicity" class="control-label"></label>
+                <label asp-for="CurrentPeriodicity" class="control-label">Periodicidade:</label>
                 <input asp-for="CurrentPeriodicity" class="form-control" />
                 <span asp-validation-for="CurrentPeriodicity" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="URLImage" class="control-label"></label>
+                <label asp-for="URLImage" class="control-label">Caminho da Imagem:</label>
                 <input asp-for="URLImage" class="form-control" />
                 <span asp-validation-for="URLImage" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Catalogar" class="btn btn-default" />
             </div>
         </form>
     </div>
