--- a/Novateca.Web/Novateca.Web/Views/Books/Create.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Books/Create.cshtml
@@ -5,82 +5,94 @@
     Layout = "~/Views/Shared/_UserPagesLayout.cshtml";
 }
 
-<h2>Create</h2>
-
-<h4>Book</h4>
+<h2>Catalogação de Livro</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="TitleMain" class="control-label"></label>
+                <label asp-for="TitleMain" class="control-label">Título:</label>
                 <input asp-for="TitleMain" class="form-control" />
                 <span asp-validation-for="TitleMain" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SubTitle" class="control-label"></label>
+                <label asp-for="SubTitle" class="control-label">Subtítulo: (se houver)</label>
                 <input asp-for="SubTitle" class="form-control" />
                 <span asp-validation-for="SubTitle" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AuthorMain" class="control-label"></label>
+                <label asp-for="AuthorMain" class="control-label">Autor principal:</label>
                 <input asp-for="AuthorMain" class="form-control" />
                 <span asp-validation-for="AuthorMain" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Authors" class="control-label"></label>
+                <label asp-for="Authors" class="control-label">Autores:</label>
                 <input asp-for="Authors" class="form-control" />
                 <span asp-validation-for="Authors" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Edition" class="control-label"></label>
+                <label asp-for="Edition" class="control-label">Edição:</label>
                 <input asp-for="Edition" class="form-control" />
                 <span asp-validation-for="Edition" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Locate" class="control-label"></label>
+                <label asp-for="Locate" class="control-label">Local da Publicação:</label>
                 <input asp-for="Locate" class="form-control" />
                 <span asp-validation-for="Locate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PublishingCompany" class="control-label"></label>
+                <label asp-for="PublishingCompany" class="control-label">Editora:</label>
                 <input asp-for="PublishingCompany" class="form-control" />
                 <span asp-validation-for="PublishingCompany" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Year" class="control-label"></label>
+                <label asp-for="Year" class="control-label">Ano:</label>
                 <input asp-for="Year" class="form-control" />
                 <span asp-validation-for="Year" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TotalPages" class="control-label"></label>
+                <label asp-for="TotalPages" class="control-label">Total de Páginas</label>
                 <input asp-for="TotalPages" class="form-control" />
                 <span asp-validation-for="TotalPages" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Subject" class="control-label"></label>
+                <label asp-for="Subject" class="control-label">Assunto:</label>
                 <input asp-for="Subject" class="form-control" />
                 <span asp-validation-for="Subject" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="URLImage" class="control-label"></label>
+                <label asp-for="Abstract" class="control-label">Resumo: (opcional)</label>
+                <input asp-for="Abstract" class="form-control" />
+                <span asp-validation-for="Abstract" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ISBN" class="control-label">ISBN:</label>
+                <input asp-for="ISBN" class="form-control" />
+                <span asp-validation-for="ISBN" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="URLImage" class="control-label">
+                    Caminho da Imagem de Capa:<br />
+                    (se houver | comece com: "~/images/capas/livros/")
+                </label>
                 <input asp-for="URLImage" class="form-control" />
                 <span asp-validation-for="URLImage" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="URLEbook" class="control-label"></label>
+                <label asp-for="URLEbook" class="control-label">Caminho do Ebook: (se houver)</label>
                 <input asp-for="URLEbook" class="form-control" />
                 <span asp-validation-for="URLEbook" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Catalogar" class="btn btn-default" />
             </div>
+            @*<img src="~/images/capas/livros/"/>*@
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Ver livros já cadastrados</a>
 </div>
 
