--- a/Novateca.Web/Novateca.Web/Views/Account/HomeAdmin.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Account/HomeAdmin.cshtml
@@ -50,7 +50,7 @@
 
             </div>
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                <a asp-area="" asp-controller="Books" asp-action="List" class="navbar-brand">
+                <a asp-area="" asp-controller="Books" asp-action="Index" class="navbar-brand">
                     <img src="~/images/list.png" style="width: 25px; height: 25px" />
                 </a>
             </div>
