--- a/Novateca.Web/Novateca.Web/Views/Home/About.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Home/About.cshtml
@@ -1,7 +1,14 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "Sobre o Novateca";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <h2>@ViewData["Title"]</h2><br />
+            <p>O Novateca foi criado em 2018 por César Murilo, graduando em Sistemas de Informaçõa pelo UNIPAM, com o intuito de ser um sistema gerenciador de biblioteca colaborativo, onde seus usuários podem comentar e curtir as obras já catalogadas.</p>
+
+        </div>
+    </div>
+</div>
+
