--- a/Novateca.Web/Novateca.Web/Views/Newspapers/Edit.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Newspapers/Edit.cshtml
@@ -45,6 +45,11 @@
                 <span asp-validation-for="Subject" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="ISSN" class="control-label">ISSN:</label>
+                <input asp-for="ISSN" class="form-control" />
+                <span asp-validation-for="ISSN" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="CurrentPeriodicity" class="control-label"></label>
                 <input asp-for="CurrentPeriodicity" class="form-control" />
                 <span asp-validation-for="CurrentPeriodicity" class="text-danger"></span>
