--- a/Novateca.Web/Novateca.Web/Views/Account/Login.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Account/Login.cshtml
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-default">Log in</button>
+                    <button type="submit" class="btn btn-default">Entrar</button>
                 </div>
                 <div class="form-group">
                     <p>
