--- a/Novateca.Web/Novateca.Web/Views/Books/Create.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Books/Create.cshtml
@@ -63,7 +63,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Abstract" class="control-label">Resumo: (opcional)</label>
-                <input asp-for="Abstract" class="form-control" />
+                <input asp-for="Abstract" class="form-control" maxlength="255" />
                 <span asp-validation-for="Abstract" class="text-danger"></span>
             </div>
             <div class="form-group">
