--- a/Novateca.Web/Novateca.Web/Views/Books/Edit.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Books/Edit.cshtml
@@ -5,9 +5,7 @@
     Layout = "~/Views/Shared/_UserPagesLayout.cshtml";
 }
 
-<h2>Edit</h2>
-
-<h4>Book</h4>
+<h2>Página de edição</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,62 +13,72 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="BookID" />
             <div class="form-group">
-                <label asp-for="TitleMain" class="control-label"></label>
+                <label asp-for="TitleMain" class="control-label">Título do livro</label>
                 <input asp-for="TitleMain" class="form-control" />
                 <span asp-validation-for="TitleMain" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SubTitle" class="control-label"></label>
+                <label asp-for="SubTitle" class="control-label">Subtítulo</label>
                 <input asp-for="SubTitle" class="form-control" />
                 <span asp-validation-for="SubTitle" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AuthorMain" class="control-label"></label>
+                <label asp-for="AuthorMain" class="control-label">Autor principal</label>
                 <input asp-for="AuthorMain" class="form-control" />
                 <span asp-validation-for="AuthorMain" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Authors" class="control-label"></label>
+                <label asp-for="Authors" class="control-label">Autores</label>
                 <input asp-for="Authors" class="form-control" />
                 <span asp-validation-for="Authors" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Edition" class="control-label"></label>
+                <label asp-for="Edition" class="control-label">Edição</label>
                 <input asp-for="Edition" class="form-control" />
                 <span asp-validation-for="Edition" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Locate" class="control-label"></label>
+                <label asp-for="Locate" class="control-label">Local da Publicação:</label>
                 <input asp-for="Locate" class="form-control" />
                 <span asp-validation-for="Locate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PublishingCompany" class="control-label"></label>
+                <label asp-for="PublishingCompany" class="control-label">Editora:</label>
                 <input asp-for="PublishingCompany" class="form-control" />
                 <span asp-validation-for="PublishingCompany" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Year" class="control-label"></label>
+                <label asp-for="Year" class="control-label">Ano:</label>
                 <input asp-for="Year" class="form-control" />
                 <span asp-validation-for="Year" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TotalPages" class="control-label"></label>
+                <label asp-for="TotalPages" class="control-label">Total de páginas:</label>
                 <input asp-for="TotalPages" class="form-control" />
                 <span asp-validation-for="TotalPages" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Subject" class="control-label"></label>
+                <label asp-for="Subject" class="control-label">Assunto:</label>
                 <input asp-for="Subject" class="form-control" />
                 <span asp-validation-for="Subject" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="URLImage" class="control-label"></label>
+                <label asp-for="Abstract" class="control-label">Resumo: (opcional)</label>
+                <input asp-for="Abstract" class="form-control" maxlength="255" />
+                <span asp-validation-for="Abstract" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ISBN" class="control-label">ISBN:</label>
+                <input asp-for="ISBN" class="form-control" />
+                <span asp-validation-for="ISBN" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="URLImage" class="control-label">Caminho da imagem de capa:</label>
                 <input asp-for="URLImage" class="form-control" />
                 <span asp-validation-for="URLImage" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="URLEbook" class="control-label"></label>
+                <label asp-for="URLEbook" class="control-label">Caminho do ebook:</label>
                 <input asp-for="URLEbook" class="form-control" />
                 <span asp-validation-for="URLEbook" class="text-danger"></span>
             </div>
