--- a/Novateca.Web/Novateca.Web/Views/Books/Index.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Books/Index.cshtml
@@ -5,98 +5,119 @@
     Layout = "~/Views/Shared/_UserPagesLayout.cshtml";
 }
 
-<h2>Index</h2>
+@*<h2>Index</h2>*@
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Catalogar nova obra</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TitleMain)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SubTitle)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AuthorMain)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Authors)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Edition)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Locate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PublishingCompany)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Year)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TotalPages)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Subject)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.URLImage)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.URLEbook)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TitleMain)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SubTitle)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AuthorMain)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Authors)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Edition)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Locate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PublishingCompany)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Year)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TotalPages)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Subject)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.URLImage)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.URLEbook)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.BookID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.BookID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.BookID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+@*<table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.TitleMain)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.SubTitle)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.AuthorMain)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Authors)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Edition)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Locate)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.PublishingCompany)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Year)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.TotalPages)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Subject)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.URLImage)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.URLEbook)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+    @foreach (var item in Model) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TitleMain)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SubTitle)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AuthorMain)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Authors)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Edition)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Locate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PublishingCompany)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Year)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TotalPages)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Subject)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.URLImage)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.URLEbook)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.BookID">Editar</a> |
+                    <a asp-action="Details" asp-route-id="@item.BookID">Detalhes</a> |
+                    <a asp-action="Delete" asp-route-id="@item.BookID">Remover obra</a>
+                </td>
+            </tr>
+    }
+        </tbody>
+    </table>*@
+<br />
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    @foreach (var item in Model)
+    {
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+        <div class="card" style="width: 250px; border: solid; border-color: dimgray; background-color: lightgray; border-radius: 5px;">
+            <img class="card-img-top" src="@Html.DisplayFor(modelItem => item.URLImage)" alt="Card image cap"
+                 style="width:230px; height:200px; margin: 5px;"><br />
+            <div class="card-body" style="margin:5px;">
+                <h5 class="card-title text-center"><b>@Html.DisplayFor(modelItem => item.TitleMain)</b></h5>
+                <p class="card-author text-center" style="font-size: 12px">@Html.DisplayFor(modelItem => item.Authors)</p>
+                <p class="card-abstract text-center" style="font-size: 10px">@Html.DisplayFor(modelItem => item.Abstract)</p>
+                <div class="card-options text-center">
+                    <a asp-action="Edit" asp-route-id="@item.BookID"><img src="~/images/edit.png" style="width:30px; height:30px; padding-right: 5px" /></a>
+                    <a asp-action="Delete" asp-route-id="@item.BookID"><img src="~/images/remove.png" style="width:30px; height:30px; padding-left: 5px" /></a>|
+                </div>
+            </div>
+        </div>
+    </div>
+    }
+</div>
