--- a/Novateca.Web/Novateca.Web/Views/Home/Contact.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Home/Contact.cshtml
@@ -1,17 +1,28 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Suporte";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <h2>@ViewData["Title"]</h2><br />
+            <address>
+                O Novateca está localizada no seguinte endereço:<br />
+                Rua dos Juruas, nº xxx, Patos de Minas, MG, Brasil<br />
+            </address>
 
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+            <address>
+                <strong>Sugestões, dúvidas ou reclamações, envie um email para:</strong><br />
+                <a href="mailto:cesarsj@unipam.edu.br">cesarsj@unipam.edu.br</a><br /><br />
+                Obrigado pelo contato!
+            </address>
+        </div>
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <img src="~/images/atendimento.jpg" style="margin-top:0; max-width:600px;
+                max-height:800px;
+                width: auto;
+                height: auto; "/>
+        </div>
+    </div>
+</div>
+
