--- a/Novateca.Web/Novateca.Web/Views/Home/Index.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Home/Index.cshtml
@@ -6,9 +6,14 @@
 <style>
 
 </style>
+<div class="row">
+    <div class="container-fluid col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+        </div>
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+            <img src="~/images/home arte.png"
+                    style="padding-top: 8%; margin: 2px; height: 300px; width: 300px;" />
+        </div>
+    </div>
 
-<div class="container-fluid">
-    <img src="~/images/home arte.png" 
-         style="padding-top: 8%; margin: 2px; height: 100%; width: 100%;"/>
-</div>
 
