--- a/Novateca.Web/Novateca.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Shared/_LoginPartial.cshtml
@@ -18,7 +18,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right" 
-        style="font-family: Britannic Bold; font-size: 24px; margin-top: 3%;
+        style="color: dodgerblue; font-family: Britannic Bold; font-size: 20px; margin-top: 2%;
         font-weight: bold;
        ">
         <li><a asp-area="" asp-controller="Account" asp-action="Login">Entrar</a></li>
