--- a/Novateca.Web/Novateca.Web/Views/Shared/_UserPagesLayout.cshtml
+++ b/Novateca.Web/Novateca.Web/Views/Shared/_UserPagesLayout.cshtml
@@ -8,7 +8,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>_Menu</title>
+    <title>Novateca</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
