--- a/Novateca.Web/Novateca.Web/wwwroot/css/site.css
+++ b/Novateca.Web/Novateca.Web/wwwroot/css/site.css
@@ -43,13 +43,13 @@ a:hover {
     color: lightslategray;
 } 
 
-footer {
+.page-footer {
     position: fixed;
     background-color: white;
     font-size: 14px;
     bottom: 0px;
     width: 100%;
-    height: 50px;
+    height: 30px;
     margin: 0;
     padding-right: 0;
 }
